# java-front

./: .gitignore  .gitmodules  .project  AUTHORS  ChangeLog  Jenkinsfile  Makefile.am  Makefile.regular  NEWS  NEWS.in  README  README.in  README.md  acinclude.m4  bootstrap  build.generated.xml  build.main.xml  build.xml  configure.ac  configure.in  java-front.m4  java-front.pc.in  java-front.spec.in  jenkins.properties  pom.xml  set_release_version.sh  update_develop_version.sh  update_version.sh
editor/: Java-Builders.esv  (+12 more)
lib/: Makefile.am  javafront.str
lib/java/: parse.str  pretty-print.str
lib/java-front/pp/: pp-Java-Statements.str
lib/java-front/pp/types/: pp-Java-ReferenceTypes.str  pp-Java-TypeVariables.str
lib/java/postprocess/: java-concat-ids.str  java-lift-eblocks.str
lib/java/pp/: expression.str  helpers.str  main.str  name.str  pp-Java-Expressions.str  pp-Java-Names.str  statement.str
lib/java/pp/interface/: pp-Java-Annotations.str
lib/java/pp/interfaces/: pp-Java-AnnotationTypes.str
lib/java/pp/type/: variable.str
lib/java/pp/types/: pp-Java-ParameterizedTypes.str
lib/java/typematch/: HICKUP
pp/: Makefile.am  jtree2abox.str  pp-Generic-Java.str  pp-Java-Expressions.str  pp-Java-Literals.str  pp-Java-Names.str  pp-Java-Statements.str  pp-Java-helpers.str  pp-Java.str
pp/basic/: Makefile.am  jtree-generic2abox.str  pp-Java-Expressions.str  pp-Java-Modifiers.str  pp-Java.str
pp/classes/: pp-Java-EnumDeclarations.str  pp-Java-MethodDeclarations.str
pp/interfaces/: pp-Java-AnnotationTypes.str  pp-Java-Annotations.str
pp/types/: pp-Java-ParameterizedTypes.str  pp-Java-ReferenceTypes.str  pp-Java-TypeVariables.str
pp/v1.5/: Makefile.am  concrete-syntax.str  jtree15-to-abox.str  pp-Java-Literals.str  pp-Java-Names.str  pp-Java.str
pp/v1.5/types/: pp-Java-PrimitiveTypes.str
sig/: Makefile.am
sig/basic/: Makefile.am
sig/generic/: Makefile.am
syn/: Makefile.am  Stratego-Java-15.sdf
syn/basic/: Basic-Java.sdf  Java-Classes.sdf  Java-Comments.sdf  Java-Expressions.sdf  Java-Identifiers.sdf  Java-Interfaces.sdf  Java-Keywords.sdf  Java-Lexical.sdf  Java-Literals.sdf  Java-MethodDecs.sdf  Java-Modifiers.sdf  Java-Names.sdf  Java-Prefixed.sdf  Java-Statements.sdf  Java-TypeDecs.sdf  Java-Types.sdf  Java-VarDecs.sdf  Java-WhiteSpace.sdf  Java.sdf  Makefile.am  Stratego-Basic-Java.sdf  Stratego-Java.sdf
syn/eblock/: Java-EBlock.sdf  Makefile.am  Stratego-Java-EBlock.sdf
syn/generic/: Generic-Java.sdf  Java-StaticImport.sdf  Makefile.am  Stratego-Generic-Java.sdf
syn/languages/java-15/classes/: FieldDeclarations.sdf
syn/languages/java-15/expressions/: MethodInvocation.sdf
syn/languages/java/eblock/: Main.sdf
syn/stratego-v1.5/: AmbEmbedded-Java-15-quotations.sdf  AmbEmbedded-Java-15.sdf  Embedded-Java-15.sdf  Java-15-in-Java-15.sdf  Makefile.am  Stratego-Java-15.sdf
syn/stratego-v1.5/languages/java/: EmbeddedJava.sdf
syn/v1.4/: Makefile.am
syn/v1.5/: Java-1.5.sdf  Java-15.sdf  Java-AnnotationTypes.sdf  Java-Annotations.sdf  Java-Classes.sdf  Java-Enums.sdf  Java-Expressions.sdf  Java-Keywords.sdf  Java-Literals.sdf  Java-MethodDecs.sdf  Java-Modifiers.sdf  Java-Names.sdf  Java-Statements.sdf  Java-TypeDecs.sdf  Java-Types.sdf  Java-VarDecs.sdf  JavaMix.sdf  Makefile.am
syn/v1.5/languages/java/: JavaMix.sdf
test/basic/: Makefile.am  comments.atestsuite  comments.testsuite  compilation-unit.testsuite  expressions.testsuite  floating-point-literals.atestsuite  identifiers.testsuite  lexical-translations.atestsuite  lexical-translations.testsuite  statements.atestsuite  statements.testsuite
test/basic/comments/: Makefile.am  T3711.java  T3713.java  T3716.java  T372.java  T373.java  T3731.java  T374.java  T375.java  T379.java  simple-1.java  simple-2.java
test/basic/compilation-units/: Cancelable3.java  MailSystem0.1.java  MailSystem0.3.java  MailSystem1.java  Makefile.am  Test1.java  Test13.java  Test16.java  Test2.java  Test4.java  Test9.java
test/basic/expressions/: Makefile.am  field2.java  field3.java  invoke.java  invoke2.java  invoke3.java  invoke4.java  u-plus.java
test/basic/statements/: dangling-else-for.java  dangling-else-labeled.java  dangling-else-while.java  if-while-else.java
test/fc/: Escape.java  Makefile.am  StringLiteral.java
test/generic/: Makefile.am  generic-compilation-unit.testsuite
test/generic/compilation-units/: Makefile.am  StaticImport.java  Test1.java  Test10.java  Test14.java  Test17.java  Test2.java  Test4.java  Test6.java  Test7.java  Test8.java  Test9.java
test/gnu-classpath/: Makefile.am  Makefile.classpath
test/gnu-classpath/basic/: Makefile.am
test/gnu-classpath/v1.4/: Makefile.am
test/gnu-classpath/v1.5/: Makefile.am
test/j2sdk/: Makefile.am
test/pp/: Makefile.am
test/syn/StrategoJava/: Makefile.am  preterm.testsuite  term.testsuite
test/v1.5/: Makefile.am  annotations.testsuite  comments.testsuite  compilation-unit.testsuite  enum-decs.testsuite  expressions.testsuite  floating-point-literals.testsuite  statements.testsuite  types.testsuite
test/v1.5/compilation-units/: Cancelable1.java  Cancelable2.java  MailSystem0.2.java  MailSystem2.java  Test11.java  Test12.java  Test15.java  Test3.java  Test5.java  Test8.java
tools/: Makefile.am  auto-java-front.str  core-lift-eblocks.str  files2parse-unit-testsuite.str  java-concat-ids.str  jtree-version.str  jtree15-parenthesize.str  jtree15-to-abox.str  parse-java.str  pp-java.str
trans/: Makefile.am  check.str  core-lift-eblocks.str  desugar.str  java.str  jtree14basic-to-jtree15.str  names.nd  names.str  pretty-print.str  types.str
trans/postprocess/: java-concat-ids.str
trans/pp/: expression.str  helpers.str  literal.str  main.str  modifier.str  name.str  statement.str
trans/pp/class/: enum-declaration.str  method-declaration.str
trans/pp/interface/: annotation-type.str  annotation.str
trans/pp/type/: parameterized.str  primitive.str  reference.str  variable.str
xtc/: Makefile.am  auto-java-front.str  files2parse-unit-testsuite.str  jtree-version.str  jtree2text.str  parse-java.str  pp-java.str
(+3905 files in other folders)
