AC_INIT(java-front, 0.3.0, martin@mbravenboer.org)
AM_INIT_AUTOMAKE([dist-bzip2])

USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_FILES([
  NEWS
  README
	Makefile

	syn/Makefile
	syn/basic/Makefile
	syn/generic/Makefile

	sig/Makefile
	sig/basic/Makefile
	sig/generic/Makefile

	pp/Makefile
  
  test/Makefile
  test/basic/Makefile
  test/basic/comments/Makefile
  test/basic/compilation-units/Makefile
  test/basic/expressions/Makefile
  test/basic/statements/Makefile  
  test/generic/Makefile
  test/generic/compilation-units/Makefile
])
AC_OUTPUT