AC_INIT(java-front, 0.3.0, martin@mbravenboer.org)
AM_INIT_AUTOMAKE([dist-bzip2])

USE_XT_PACKAGES

AC_PROG_CC
AC_PROG_INSTALL

SET_SVN_REVISION
AC_SUBST(SVN_REVISION)
echo "** INFO -- SVN Revision is: $SVN_REVISION"


AC_CONFIG_FILES([
  java-front.spec
	Makefile
    
	syn/Makefile
	syn/basic/Makefile
	syn/generic/Makefile

	sig/Makefile
	sig/basic/Makefile
	sig/generic/Makefile

	pp/Makefile
	xtc/Makefile
  
  test/Makefile
  test/basic/Makefile
  test/basic/comments/Makefile
  test/basic/compilation-units/Makefile
  test/basic/expressions/Makefile
  test/basic/statements/Makefile  
  test/generic/Makefile
  test/generic/compilation-units/Makefile


])
AC_OUTPUT